-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.3.1, Qt Creator 4.4.0-beta1
-
None
If open a project and run Clang Static Analyzer view of analyzer appears and everything is fine. But if close analyzed project and open a new one then this view disappears and it's impossible to access analyzer view in QtCreator. Window->Views menu is disabled...
For Gerrit Dashboard: QTCREATORBUG-18549 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
200236,3 | Debugger: Switch perspective when coming from another mode | 4.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |