Debugger: Switch perspective when coming from another mode

Problematic case was:
 1. Run some analyzer (mode switch: edit->debug)
 2. Close project, re-open it (mode switch: debug->edit)
 3. Run analyzer from 1. again
 --> Ops, no mode switch to debug mode (and thus no analyzer view)
     because it's still the same perspective

Task-number: QTCREATORBUG-18549
Change-Id: Iccb1e0629454c1373280a55d6c41410c7161520e
Reviewed-by: hjk <hjk@qt.io>